--- a/public/package.json
+++ b/public/package.json
@@ -18,6 +18,7 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "serve": "^11.3.0",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
