--- a/public/package.json
+++ b/public/package.json
@@ -12,12 +12,14 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "local-storage": "^2.0.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-slick": "^0.25.2",
     "serve": "^11.3.0",
     "slick-carousel": "^1.8.1"
   },
