--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
