--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "cloudinary-core": "^2.8.1",
+    "cloudinary-react": "^1.3.4",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "jquery": "^3.4.1",
@@ -16,7 +18,8 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-upload-gallery": "0.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
