--- a/api/v1/composer.json
+++ b/api/v1/composer.json
@@ -6,9 +6,8 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "laravel/lumen-framework": "^6.0",
-        "cloudinary/cloudinary_php": "dev-master"
+        "flipbox/lumen-generator": "^6.0",
+        "laravel/lumen-framework": "^6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
