--- a/admin/package.json
+++ b/admin/package.json
@@ -17,8 +17,10 @@
     "fontawesome": "^5.6.3",
     "jquery": "^3.4.1",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
+    "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0",
