--- a/admin/package.json
+++ b/admin/package.json
@@ -9,12 +9,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "anychart-react": "^1.4.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "cloudinary-core": "^2.8.1",
     "cloudinary-react": "^1.3.4",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
+    "highcharts": "^8.0.4",
+    "highcharts-react-official": "^3.0.0",
     "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
@@ -23,6 +26,7 @@
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-sparklines": "^1.7.0",
     "react-toastify": "^5.5.0",
     "react-upload-gallery": "0.0.7"
   },
