--- a/admin/package.json
+++ b/admin/package.json
@@ -24,9 +24,11 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-helmet": "^6.0.0",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-sparklines": "^1.7.0",
+    "react-tabs": "^3.1.0",
     "react-toastify": "^5.5.0",
     "react-upload-gallery": "0.0.7"
   },
