--- a/public/package.json
+++ b/public/package.json
@@ -18,9 +18,12 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-html-parser": "^2.0.2",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "serve": "^11.3.0",
     "slick-carousel": "^1.8.1"
   },
