--- a/public/package.json
+++ b/public/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "local-storage": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
