--- a/public/package.json
+++ b/public/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-html-parser": "^2.0.2",
+    "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
