--- a/admin/package.json
+++ b/admin/package.json
@@ -19,6 +19,7 @@
     "highcharts": "^8.0.4",
     "highcharts-react-official": "^3.0.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
