--- a/public/package.json
+++ b/public/package.json
@@ -21,6 +21,7 @@
     "react-helmet": "^5.2.1",
     "react-html-parser": "^2.0.2",
     "react-icons": "^3.10.0",
+    "react-id-swiper": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
@@ -28,7 +29,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "serve": "^11.3.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^5.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
