--- a/public/package.json
+++ b/public/package.json
@@ -10,10 +10,13 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "local-storage": "^2.0.0",
     "lodash": "^4.17.15",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -24,7 +27,7 @@
     "react-id-swiper": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.1",
     "react-slick": "^0.25.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -52,5 +55,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
