--- a/public/package.json
+++ b/public/package.json
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-html-parser": "^2.0.2",
     "react-icons": "^3.10.0",
